--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h2>HTML Image</h2>
-<img src="jaibhairaviweb.png" alt="Trulli" width="500" height="333">
+<img src="jaibhairavi_files/jaibhairaviweb.png" alt="jaibhairavi" width="500" height="333">
 
 </body>
 </html>
