--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My One Page Site</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+    }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* fills screen, may crop */
+      display: block;
+    }
+  </style>
+</head>
 <body>
-
-<h2>HTML Image</h2>
-<img src="jaibhairavi_files/jaibhairaviweb.png" alt="jaibhairavi" width="500" height="333">
-
+  <img src="jaibhairavi_files/jaibhairaviweb.png" alt="My Website Info">
 </body>
 </html>
