--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     }
     img {
       width: 100%;
-      height: 100%;
-      object-fit: cover; /* fills screen, may crop */
+      height: auto;
       display: block;
     }
   </style>
